<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Framelayout to display Fragments -->
    <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <!-- Listview to display slider menu -->
    <ListView
            android:id="@+id/list_slidermenu"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@color/list_divider"
            android:dividerHeight="1dp"
            android:listSelector="@drawable/list_selector"
            android:background="@color/list_background"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:background="#ffffff">

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:padding="60dp"
                android:id="@+id/imageView"
                android:src="@drawable/bvdh_logo"
                android:layout_marginTop="0dp"
                android:layout_weight="6"
                android:background="@drawable/backrepeat"/>

        <TextView
                android:layout_width="fill_parent"
                android:text="@string/StartQuestion"
                style="@style/textCapsCentre"
                android:layout_height="0dp"
                android:id="@+id/mainQuestion"
                android:textColor="#000000"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1" />

        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/btn_crop"
                android:text="@string/btnAddPhoto"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                style="@style/BvDH_button"
                android:textSize="18dp"
                android:layout_gravity="center_horizontal|bottom|left"
                android:drawableLeft="@drawable/textphoto"
                android:drawableRight="@drawable/arrow"
                android:layout_alignParentStart="true"
                android:background="@drawable/button"
                android:gravity="center_vertical|center"
                android:textColor="#000000"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp" />

        <Button
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/btnAddTxt"
                android:id="@+id/btn_Skip" android:textSize="18dp"
                android:background="@drawable/button"
                android:drawableRight="@drawable/arrow"
                android:gravity="center_vertical|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                style="@style/BvDH_button"
                android:textColor="#000000"
                android:layout_gravity="bottom|right"
                android:drawableLeft="@drawable/text"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

