<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
    android:background="@drawable/backrepeat">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
        android:layout_weight="6" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#FFFFFF">

        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConfirmCheckbox"
            android:id="@+id/checkBox"
                android:textColor="@android:color/black"
                android:button="@drawable/btn_check_holo_dark"
                android:textSize="12sp"
                android:checked="false"
                android:paddingLeft="5dp"
                android:radius="5dp"
                android:gravity="center"
            android:paddingRight="15dp"
            android:layout_weight="1"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/editText_email"
            android:layout_marginTop="5dp" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText_email"
                android:hint="@string/ConfirmEmailHint"
                android:selectAllOnFocus="true"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
            android:background="@drawable/email"
            android:drawableLeft="@drawable/envelope"
            android:drawablePadding="25dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="15dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp" />

        <Button
            style="@style/buttonArrowGreen"
            android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ConfirmBtn"
                android:id="@+id/btnfinalsubmit"
                android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:layout_alignTop="@+id/editText_email"
            android:src="@drawable/question_mark"
            android:background="@android:color/transparent"
            android:layout_alignBottom="@+id/editText_email"
            android:layout_alignRight="@+id/editText_email"
            android:layout_alignEnd="@+id/editText_email"
            android:paddingRight="15dp"
            android:paddingLeft="10dp" />
    </RelativeLayout>


</LinearLayout>