<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backrepeat"
                android:orientation="vertical"
    android:clickable="true">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/animView"
            android:background="#000000"
            android:layout_alignTop="@+id/aspectFix"
            android:layout_alignLeft="@+id/aspectFix"
            android:layout_alignBottom="@+id/aspectFix"
            android:layout_alignRight="@+id/aspectFix" />

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/aspectFix"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:background="@drawable/back"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
            android:adjustViewBounds="true" />

        <ImageView
                android:id="@+id/ImageViewPreview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:scaleType="fitXY"
                android:minHeight="225dp"
                android:maxHeight="450dp"
                android:minWidth="300dp"
                android:maxWidth="600dp"
                android:layout_alignBottom="@+id/aspectFix"
                android:layout_alignRight="@+id/aspectFix"
                android:layout_alignLeft="@+id/aspectFix"
                android:layout_alignTop="@+id/aspectFix"
            android:adjustViewBounds="true" />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextViewPreview"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal"
            android:textColor="#f5f5f5"
                android:textStyle="bold"
                android:singleLine="false"
                android:maxLines="4"
                android:lineSpacingExtra="-4dp"
                android:clickable="true"
                android:gravity="center_vertical|left"
                android:layout_alignBottom="@+id/aspectFix"
                android:layout_alignLeft="@+id/aspectFix"
                android:layout_alignRight="@+id/aspectFix"
                android:layout_alignTop="@+id/aspectFix" />

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignTop="@+id/aspectFix"
                android:layout_alignLeft="@+id/aspectFix"
                android:layout_alignBottom="@+id/aspectFix"
                android:layout_alignRight="@+id/aspectFix">

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnRestartAnim"
                    android:src="@drawable/restart"
                    android:background="@android:color/transparent"
                    android:visibility="invisible"
                    android:layout_alignParentStart="false"
                    android:layout_centerInParent="true" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#FFFFFF">

        <Button
            style="@style/buttonArrowGrey"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/PreviewbtnChangePhoto"
            android:id="@+id/btnChangePreviewPhoto"
            android:drawableLeft="@drawable/camera"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp" />

        <Button
                style="@style/buttonArrowGrey"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/PreviewbtnChangeTxt"
                android:id="@+id/btnchangePreviewText"
            android:textColor="#000000"
            android:drawableLeft="@drawable/text"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1" />

        <Button

            style="@style/buttonArrowGreen"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/Continue"
            android:id="@+id/btnSubmitmsgtxt"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/happy"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>